// Personal Website Portfolio - Database Schema
// Use this with dbdiagram.io to generate ERD
// Copy/paste this content at https://dbdiagram.io/d

Project PersonalWebsitePortfolio {
  database_type: 'PostgreSQL'
  Note: '''
    # Personal Website Portfolio Database Schema

    Database design for a professional portfolio website
    showcasing projects, skills, blog content, and contact management.

    **Key Features:**
    - Project portfolio with technology tracking and image galleries
    - Blog system with categories and tags
    - Contact management and inquiries

    **Schema managed by Flyway** (V1__initial_schema.sql)
  '''
}

// ================================
// ENUMERATIONS
// ================================

Enum project_type {
  PERSONAL
  PROFESSIONAL
  OPEN_SOURCE
  LEARNING
  FREELANCE
}

Enum project_status {
  PLANNING
  IN_PROGRESS
  COMPLETED
  MAINTAINED
  ARCHIVED
}

Enum difficulty_level {
  BEGINNER
  INTERMEDIATE
  ADVANCED
  EXPERT
}

Enum technology_category {
  LANGUAGE
  FRAMEWORK
  LIBRARY
  DATABASE
  TOOL
  CLOUD
  DEPLOYMENT
  TESTING
}

Enum proficiency_level {
  LEARNING
  FAMILIAR
  PROFICIENT
  EXPERT
}

Enum inquiry_type {
  GENERAL
  PROJECT
  COLLABORATION
  HIRING
  FREELANCE
}

Enum submission_status {
  NEW
  READ
  REPLIED
  ARCHIVED
}

Enum image_type {
  THUMBNAIL
  SCREENSHOT
  ARCHITECTURE_DIAGRAM
  UI_MOCKUP
  LOGO
}

// ================================
// PORTFOLIO TABLES
// ================================

Table technologies {
  id bigserial [primary key]
  name varchar(100) [unique, not null]
  version varchar(50)
  category technology_category
  icon_url varchar(500)
  color varchar(7) [note: 'Hex color code for UI']
  documentation_url varchar(500)
  proficiency_level proficiency_level [default: 'LEARNING']
  years_experience decimal(3,1) [note: 'Years of professional experience']
  featured boolean [not null, default: false]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    name [name: 'idx_technologies_name']
    category [name: 'idx_technologies_category']
    featured [name: 'idx_technologies_featured']
    proficiency_level [name: 'idx_technologies_proficiency']
  }

  Note: 'Technologies and skills with proficiency tracking'
}

Table projects {
  id bigserial [primary key]
  name varchar(255) [unique, not null]
  slug varchar(255) [unique, not null]
  short_description varchar(500)
  full_description text
  tech_stack varchar(255) [note: 'Legacy field — will be migrated to M:N relationship']
  github_url varchar(500)
  live_url varchar(500)
  docker_url varchar(500)
  documentation_url varchar(500)
  project_type project_type [default: 'PERSONAL']
  status project_status [default: 'PLANNING']
  difficulty_level difficulty_level [default: 'BEGINNER']
  start_date timestamptz
  completion_date timestamptz
  estimated_hours integer [note: 'Time investment estimate']
  display_order integer
  featured boolean [not null, default: false]
  published boolean [not null, default: false]
  view_count bigint [not null, default: 0]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    slug [name: 'idx_projects_slug']
    status [name: 'idx_projects_status']
    project_type [name: 'idx_projects_type']
    published [name: 'idx_projects_published']
    featured [name: 'idx_projects_featured']
    display_order [name: 'idx_projects_display_order']
    created_at [name: 'idx_projects_created_at']
  }

  Note: 'Central portfolio projects with comprehensive metadata'
}

Table project_technologies {
  project_id bigint [ref: > projects.id, not null]
  technology_id bigint [ref: > technologies.id, not null]

  indexes {
    (project_id, technology_id) [unique, name: 'pk_project_technologies']
    technology_id [name: 'idx_project_technologies_tech']
  }

  Note: 'Many-to-many join table between projects and technologies'
}

Table project_images {
  id bigserial [primary key]
  project_id bigint [ref: > projects.id, not null]
  url varchar(1000) [not null]
  alt_text varchar(255)
  caption varchar(500)
  image_type image_type [not null, default: 'SCREENSHOT']
  display_order integer [not null, default: 0]
  is_primary boolean [not null, default: false]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    project_id [name: 'idx_project_images_project']
    is_primary [name: 'idx_project_images_primary']
    display_order [name: 'idx_project_images_order']
  }

  Note: 'Project image galleries with type classification'
}

// ================================
// BLOG TABLES
// ================================

Table blog_categories {
  id bigserial [primary key]
  name varchar(100) [unique, not null]
  slug varchar(100) [unique, not null]
  description text
  color varchar(7) [note: 'Hex color for UI theming']
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    slug [name: 'idx_blog_categories_slug']
    name [name: 'idx_blog_categories_name']
  }

  Note: 'Blog content organization categories'
}

Table blog_tags {
  id bigserial [primary key]
  name varchar(50) [unique, not null]
  slug varchar(50) [unique, not null]
  usage_count integer [not null, default: 0]
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    slug [name: 'idx_blog_tags_slug']
    name [name: 'idx_blog_tags_name']
    usage_count [name: 'idx_blog_tags_usage']
  }

  Note: 'Flexible content tagging with usage tracking'
}

Table blog_posts {
  id bigserial [primary key]
  title varchar(255) [not null]
  slug varchar(255) [unique, not null]
  content text
  excerpt text
  published boolean [not null, default: false]
  published_at timestamptz
  view_count integer [not null, default: 0]
  read_time_minutes integer [note: 'Estimated reading time']
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    slug [name: 'idx_blog_posts_slug']
    published [name: 'idx_blog_posts_published']
    published_at [name: 'idx_blog_posts_published_at']
    created_at [name: 'idx_blog_posts_created_at']
  }

  Note: 'Blog posts and technical articles'
}

Table blog_post_categories {
  blog_post_id bigint [ref: > blog_posts.id, not null]
  blog_category_id bigint [ref: > blog_categories.id, not null]

  indexes {
    (blog_post_id, blog_category_id) [unique, name: 'pk_blog_post_categories']
    blog_category_id [name: 'idx_blog_post_categories_category']
  }

  Note: 'Many-to-many: blog posts to categories'
}

Table blog_post_tags {
  blog_post_id bigint [ref: > blog_posts.id, not null]
  blog_tag_id bigint [ref: > blog_tags.id, not null]

  indexes {
    (blog_post_id, blog_tag_id) [unique, name: 'pk_blog_post_tags']
    blog_tag_id [name: 'idx_blog_post_tags_tag']
  }

  Note: 'Many-to-many: blog posts to tags'
}

// ================================
// CONTACT TABLE
// ================================

Table contact_submissions {
  id bigserial [primary key]
  name varchar(255) [not null]
  email varchar(255) [not null]
  subject varchar(255)
  message text [not null]
  inquiry_type inquiry_type [not null, default: 'GENERAL']
  status submission_status [not null, default: 'NEW']
  ip_address inet [note: 'For spam detection']
  user_agent text [note: 'Browser/device information']
  created_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  responded_at timestamptz

  indexes {
    status [name: 'idx_contact_submissions_status']
    created_at [name: 'idx_contact_submissions_created_at']
    inquiry_type [name: 'idx_contact_submissions_inquiry']
    email [name: 'idx_contact_submissions_email']
  }

  Note: 'Professional inquiries and contact form submissions'
}
